--- a/app/views/articles/new.html.haml
+++ b/app/views/articles/new.html.haml
@@ -1,3 +1,4 @@
-%h1 New Article
-= render 'form', article: @article
-= link_to 'Back', articles_path
+- model_class = Article
+.page-header
+  %h1=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize
+= render :partial => "form"
