--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -1,16 +1,34 @@
-%p#notice= notice
+- model_class = Article
+.page-header
+  %h1=t '.title', :default => model_class.model_name.human.titleize
+
 %p
-  %strong Name:
+  %strong= model_class.human_attribute_name(:name) + ':'
+  %br
   = @article.name
 %p
-  %strong Content:
+  %strong= model_class.human_attribute_name(:content) + ':'
+  %br
   = @article.content
-%p
-  %strong Comments:
+
+.comments
+  %strong= model_class.human_attribute_name(:comments) + ':'
+  %br
   - @article.comments.each do |c|
-    %p
-      %strong= c.content
-      %span= c.created_at
-= link_to 'Edit', edit_article_path(@article)
-|
-= link_to 'Back', articles_path
+    %p= c.content
+
+= form_for @comment, remote: true, html: { class: "form form-horizontal article" }, format: :json do |f|
+  .form-group
+    .col-lg-10
+      = f.text_field :content, class: 'form-control', required: true
+      = f.hidden_field :commentable_id, value: @article.id
+      = f.hidden_field :commentable_type, value: @article.class
+    = f.error_span(:content)
+  .form-group.hidden
+    .col-lg-offset-2.col-lg-10
+      = f.submit class: 'btn btn-primary'
+
+
+= link_to t('.back', :default => t("helpers.links.back")), articles_path, :class => 'btn btn-default'
+= link_to t('.edit', :default => t("helpers.links.edit")), edit_article_path(@article), :class => 'btn btn-default'
+= link_to t('.destroy', :default => t("helpers.links.destroy")), article_path(@article), :method => "delete", :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-danger'
