--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -1,10 +1,10 @@
-= form_for @comment do |f|
-  - if @comment.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@comment.errors.count, "error")} prohibited this comment from being saved:"
-      %ul
-        - @comment.errors.full_messages.each do |message|
-          %li= message
-
-  .actions
-    = f.submit 'Save'
+= form_for Comment.new, remote: true, html: { class: "form form-horizontal article" }, format: :json do |f|
+  .form-group
+    .col-lg-10
+      = f.text_field :content, class: 'form-control', required: true
+      = f.hidden_field :commentable_id, value: model.id
+      = f.hidden_field :commentable_type, value: model.class
+    = f.error_span(:content)
+  .form-group.hidden
+    .col-lg-offset-2.col-lg-10
+      = f.submit class: 'btn btn-primary'
