--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,10 +23,10 @@
         %a.navbar-brand(href="/") TenderScout
         .navbar-collapse.collapse.navbar-responsive-collapse
           %ul.nav.navbar-nav
-            %li= link_to "Link 1", "/path1"
+            %li= link_to Comment.to_s.pluralize.titleize, comments_path
             %li= link_to "Link 2", "/path2"
             %li= link_to "Link 3", "/path3"
-            %li= link_to "Link 3", "/path3"
+            %li= link_to "Logout", destroy_user_session_path, method: :delete, class: 'btn btn-danger'
 
     .container
       .row
@@ -37,8 +37,7 @@
           .well.sidebar-nav
             %h3 Sidebar
             %ul.nav.nav-list
-              %li.nav-header Sidebar
-              %li= link_to "Link 1", "/path1"
+              %li= link_to Comment.to_s.pluralize.titleize, comments_path
               %li= link_to "Link 2", "/path2"
               %li= link_to "Link 3", "/path3"
       %footer
