--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,7 +20,7 @@
           %span.icon-bar
           %span.icon-bar
           %span.icon-bar
-        %a.navbar-brand(href="/") TenderScout
+        %a.navbar-brand(href="/") Trololo
         .navbar-collapse.collapse.navbar-responsive-collapse
           %ul.nav.navbar-nav
             %li= link_to Comment.to_s.pluralize.titleize, comments_path
@@ -40,6 +40,6 @@
             %ul.nav.nav-list
               %li= link_to Comment.to_s.pluralize.titleize, comments_path
               %li= link_to "Link 2", "/path2"
-              %li= link_to "Link 3", "/path3"
+              %li= link_to "Gems", gem_list_path
       %footer
         %p &copy; Company 2018
