--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -18,7 +18,9 @@
         %td=l article.created_at
         %td
           = link_to t('.show', :default => t("helpers.links.show")), article_path(article), :class => 'btn btn-default btn-xs'
-          = link_to t('.edit', :default => t("helpers.links.edit")), edit_article_path(article), :class => 'btn btn-default btn-xs'
-          = link_to t('.destroy', :default => t("helpers.links.destroy")), article_path(article), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-xs btn-danger'
+          - if can? :read, article
+            = link_to t('.edit', :default => t("helpers.links.edit")), edit_article_path(article), :class => 'btn btn-default btn-xs'
+          - if can? :destroy, article
+            = link_to t('.destroy', :default => t("helpers.links.destroy")), article_path(article), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-xs btn-danger'
 
 = link_to t('.new', :default => t("helpers.links.new")), new_article_path, :class => 'btn btn-primary'
