--- a/app/views/comments/show.html.haml
+++ b/app/views/comments/show.html.haml
@@ -1,6 +1,6 @@
 %p#notice= notice
 
-
-= link_to 'Edit', edit_comment_path(@comment)
+- if can? :read, @comment
+  = link_to 'Edit', edit_comment_path(@comment)
 \|
 = link_to 'Back', comments_path
